# apertium-ces-rus

./: .gitattributes  Makefile.am  apertium-ces-rus.ces-rus.dix  apertium-ces-rus.ces-rus.lrx  apertium-ces-rus.ces-rus.rlx  apertium-ces-rus.ces-rus.t1x  apertium-ces-rus.ces.dix  apertium-ces-rus.rus.dix  configure.ac  modes.xml  to_do
dev/: cesilko.ces
dev/testvoc/: testvoc-summary.ces-rus.txt  testvoc-summary.rus-ces.txt  testvoc.sh
test/: ces-rus-pending-biltrans-expected.txt  ces-rus-pending-generator-expected.txt  ces-rus-pending-input.txt  ces-rus-pending-interchunk-expected.txt  ces-rus-pending-morph-expected.txt  ces-rus-pending-postchunk-expected.txt  ces-rus-pending-postgen-gold.txt  ces-rus-pending-pretransfer-expected.txt  tests.json
